--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
     <div class="cover">
-        <img class="three" src="vibes/3 1.svg">
+        <img class="three" src="vibes/3.svg">
         <h1  class="anchor-three">You’re Covered</h1>
         <h2 class="content-three">Congratulations on securing your loved ones financial future!</h2>
     </div>
