--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Shadow Fiend</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./vibes/favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 
@@ -17,28 +21,27 @@
         Just a few
         clicks and you’re done.</h2>
     <section class="main-content">
-        <div class="container"> 
-        <div class="get col">
-            <img class="one" src="vibes/Rectangle.svg">
-            <h1 class="anchor-one">Get My Price</h1>
-            <h2 class="content-one">Choose the amount that you would like to be covered for and we’ll give you a quote.
-            </h2>
-        </div>
-        <div class="apply col">
-            <div class="contain">
-              
+        <div class="container">
+            <div class="get col">
+>
             </div>
-            <h1 class="anchor-two">Apply</h1>
-            <h2 class="content-two">Answer a few questions and get your final price.</h2>
-            <span>GET MY PRICE <img class="button" src="./vibes/Shape.svg"> </span>
+            <h1 class="anchor-one">Get My Price</h1>
+            <h2 class="content-one">Choose the amount that you would like to be covered for and we’ll give you a quote.</h2>
         </div>
-        <div class="cover col">
-            <img class="three" src="vibes/3.svg">
-            <h1 class="anchor-three">You’re Covered</h1>
-            <h2 class="content-three">Congratulations on securing your loved ones financial future!</h2>
-        </div>
+            <div class="apply">
+                <div class="contain">
+
+                </div>
+                <h1 class="anchor-two">Apply</h1>
+                <h2 class="content-two">Answer a few questions and get your final price.</h2>
+                <span>GET MY PRICE <img class="button" src="./vibes/Shape.svg"> </span>
+            </div>
+            <div class="cover col">
+                <img class="three" src="vibes/3.svg">
+                <h1 class="anchor-three">You’re Covered</h1>
+                <h2 class="content-three">Congratulations on securing your loved ones financial future!</h2>
+            </div>
         </div>
     </section>
 </body>
-
 </html>
