--- a/index.html
+++ b/index.html
@@ -23,25 +23,29 @@
     <section class="main-content">
         <div class="container">
             <div class="get col">
->
+                
             </div>
             <h1 class="anchor-one">Get My Price</h1>
-            <h2 class="content-one">Choose the amount that you would like to be covered for and we’ll give you a quote.</h2>
+            <h2 class="content-one">Choose the amount that you would like to be covered for and we’ll give you a quote.
+            </h2>
         </div>
-            <div class="apply">
-                <div class="contain">
 
-                </div>
-                <h1 class="anchor-two">Apply</h1>
-                <h2 class="content-two">Answer a few questions and get your final price.</h2>
-                <span>GET MY PRICE <img class="button" src="./vibes/Shape.svg"> </span>
+        
+        <div class="apply">
+            <div class="contain">
+
             </div>
-            <div class="cover col">
-                <img class="three" src="vibes/3.svg">
-                <h1 class="anchor-three">You’re Covered</h1>
-                <h2 class="content-three">Congratulations on securing your loved ones financial future!</h2>
-            </div>
+            <h1 class="anchor-two">Apply</h1>
+            <h2 class="content-two">Answer a few questions and get your final price.</h2>
+            <span>GET MY PRICE <img class="button" src="./vibes/Shape.svg"> </span>
+        </div>
+        <div class="cover col">
+            <img class="three" src="vibes/3.svg">
+            <h1 class="anchor-three">You’re Covered</h1>
+            <h2 class="content-three">Congratulations on securing your loved ones financial future!</h2>
+        </div>
         </div>
     </section>
 </body>
+
 </html>
